<resources>
    <string name="app_name">MyTix</string>
    <string name="slogan">Wisata Jadi Lebih Asyik!</string>
    <string name="signin">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Nama</string>
    <string name="bio_label">Bio</string>
    <string name="explore">EXPLORE</string>
</resources>